--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -508,6 +508,10 @@ footer.footer_main .footer_main_grid-wrapper .footer-title-1 .header__logo-text 
     animation: TopToBottom 0.2s linear 0.8s forwards;
 }
 
+.menu .menu_navigation .menu_navigation-list .menu_navigation-item.animation:nth-child(4) {
+    animation: TopToBottom 0.2s linear 1s forwards;
+}
+
 .menu .menu-media .media-wrapper.animation:nth-child(1) {
     animation: TopToBottom 0.2s linear 1.1s forwards;
 }
@@ -862,7 +866,7 @@ section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-new_NOSLIDER
     gap: 20px;
     grid-auto-flow: row;
     grid-template-areas:
-        "NOSLIDE_1 NOSLIDE_2 NOSLIDE_3";
+        ". NOSLIDE_1 NOSLIDE_2";
 }
 
 section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-new_NOSLIDER .NOSLIDE_1 {
@@ -873,9 +877,9 @@ section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-new_NOSLIDER
     grid-area: NOSLIDE_2;
 }
 
-section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-new_NOSLIDER .NOSLIDE_3 {
-    grid-area: NOSLIDE_3;
-}
+/*section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-new_NOSLIDER .NOSLIDE_3 {*/
+/*    grid-area: NOSLIDE_3;*/
+/*}*/
 
 section.traffic_patrol .traffic_patrol-slide-6 .swiper-pagination {
     display: none;
@@ -891,10 +895,10 @@ section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-8 {
     display: none;
 }
 
-section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-9 {
-    grid-area: traffic_patrol-no-slide-9;
-    display: none;
-}
+/*section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-9 {*/
+/*    grid-area: traffic_patrol-no-slide-9;*/
+/*    display: none;*/
+/*}*/
 
 section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-text-mobile-1 {
     grid-area: traffic_patrol-text-mobile-1 ;
