--- a/src/style/style_models.css
+++ b/src/style/style_models.css
@@ -421,23 +421,23 @@ a-scene {
 }
 
 .tech_spec__interior#ford {
-    background: url("../img/layout/amarok_prew.png") no-repeat center/cover;
+    background: url("../img/layout/ford_prew.png") no-repeat center/cover;
 }
 
 .tech_spec__interior#ford.garage_ford {
     background-image: url("../img/layout/slider/ford.png");
 }
 
-.tech_spec__interior#solaris_green {
-    background: url("../img/layout/amarok_prew.png") no-repeat center/cover;
-}
+/*.tech_spec__interior#solaris_green {*/
+/*    background: url("../img/layout/amarok_prew.png") no-repeat center/cover;*/
+/*}*/
 
-.tech_spec__interior#solaris_green.garage_solaris_green {
-    background-image: url("../img/layout/slider/solaris_green.png");
-}
+/*.tech_spec__interior#solaris_green.garage_solaris_green {*/
+/*    background-image: url("../img/layout/slider/solaris_green.png");*/
+/*}*/
 
 .tech_spec__interior#solaris_gray {
-    background: url("../img/layout/amarok_prew.png") no-repeat center/cover;
+    background: url("../img/layout/solaris_gray_prew.png") no-repeat center/cover;
 }
 
 .tech_spec__interior#solaris_gray.garage_solaris_gray {
@@ -445,7 +445,7 @@ a-scene {
 }
 
 .tech_spec__interior#bus {
-    background: url("../img/layout/amarok_prew.png") no-repeat center/cover;
+    background: url("../img/layout/bus_prew.png") no-repeat center/cover;
 }
 
 .tech_spec__interior#bus.garage_bus {
