--- a/src/style/media_models.css
+++ b/src/style/media_models.css
@@ -280,6 +280,7 @@
         /*top: 75px;*/
         left: 0;
         backdrop-filter: blur(6px);
+        -webkit-backdrop-filter: blur(6px);
         border: 1px solid white;
         padding: 10px 12px;
         border-radius: 10px;
@@ -328,6 +329,10 @@
         position: static;
     }
 
+    .tech_spec .tech_spec__description .tech_spec__titles.hidden {
+        margin-bottom: 14px;
+    }
+
     .tech_spec .tech_spec__description .tech_spec__titles .tech_spec__title {
         font-size: 22px;
     }
@@ -355,6 +360,8 @@
 @media screen and (max-width:400px) and (max-height:680px) {
     .tech_spec .tech_spec__description {
         padding: 10px 16px;
+        -webkit-backdrop-filter: blur(16px);
+        backdrop-filter: blur(16px);
     }
 
     .tech_spec .tech_spec__description .tech_spec__description-grid_wrapper {
@@ -389,6 +396,14 @@
 
     .tech_spec .tech_spec__outfit .tech_spec__outfit-list .tech_spec__outfit-item .tech_spec__outfit-text {
         font-size: 10px;
+    }
+
+    .tech_spec__interior {
+        bottom: 60px !important;
+    }
+
+    .auto_park .auto_park_wrapper {
+        padding: 14px 20px 34px 20px;
     }
 }
 
@@ -448,7 +463,7 @@
     .tech_spec  .tech_spec__description .tech_spec__description-grid_wrapper {
         grid-template-columns: repeat(2, max-content);
         grid-template-rows: repeat(3, max-content);
-        /*gap: 24px;*/
+        gap: 16px 24px;
         grid-template-areas:
     "tech_spec__titles tech_spec__outfit"
     "tech_spec__mission tech_spec__outfit"
@@ -467,6 +482,11 @@
 
     .tech_spec .tech_spec__description.hidden {
         padding: 20px 10px 10px 20px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__titles .tech_spec__subtitle {
+        font-size: 16px;
+        max-width: 315px;
     }
 
     .tech_spec .tech_spec__description .tech_spec__titles .tech_spec__title {
@@ -566,6 +586,7 @@
         top: 20px;
         right: 20px;
         backdrop-filter: blur(6px);
+        -webkit-backdrop-filter: blur(6px);
         border: 1px solid white;
         padding: 10px 12px;
         border-radius: 10px;
