--- a/src/style/style_models.css
+++ b/src/style/style_models.css
@@ -72,6 +72,7 @@ a-scene {
     display: flex;
     background: rgba(9, 9, 9, 0.50);
     backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
     border-radius: 16px;
     padding: 20px;
     gap: 16px;
@@ -196,6 +197,7 @@ a-scene {
     padding: 20px 30px;
     background: rgba(9, 9, 9, 0.50);
     backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
     border-radius: 30px;
     transition: all .8s ease;
 }
@@ -525,6 +527,7 @@ a-scene {
     background-color: #090909;
     border: 1px solid #FFFFFF;
     backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
     border-radius: 12px;
     height: 224px;
     padding: 20px;
