--- a/src/style/media_models.css
+++ b/src/style/media_models.css
@@ -199,11 +199,18 @@
         font-size: 20px;
     }
 
+    /*.tech_spec__interior {*/
+    /*    margin-top: 70px;*/
+    /*    margin-right: 50px;*/
+    /*    max-width: 110px;*/
+    /*    height: 70px;*/
+    /*}*/
+
     .tech_spec__interior {
-        margin-top: 70px;
-        margin-right: 50px;
-        max-width: 110px;
-        height: 70px;
+        margin-top: 50px;
+        margin-right: 30px;
+        max-width: 130px;
+        height: 90px;
     }
 
     .tech_spec__interior .tech_spec__interior-btn .arrow-wrapper {
@@ -356,6 +363,30 @@
         font-size: 15px;
     }
 }
+
+@media only screen and (min-width: 1200px) and (max-height: 750px) {
+    .tech_spec .tech_spec__description .tech_spec__description-grid_wrapper {
+        gap: 18px;
+    }
+
+    .tech_spec__button .tech_spec__btn {
+        padding: 12px;
+    }
+}
+
+/*@media only screen and (min-width: 700px) and (max-width: 1200px) {*/
+/*    .hideARButton {*/
+/*        position: absolute;*/
+/*        width: 50px;*/
+/*        height: 50px;*/
+/*        right: 88px;*/
+/*        left: unset;*/
+/*        top: unset;*/
+/*        bottom: 80px;*/
+/*        background-color: #000000;*/
+/*        !*border-radius: 100%;*!*/
+/*    }*/
+/*}*/
 
 @media screen and (max-width:400px) and (max-height:680px) {
     .tech_spec .tech_spec__description {
