--- a/src/style/media/media_main.css
+++ b/src/style/media/media_main.css
@@ -14,7 +14,8 @@
         font-size: 2.8rem;
     }
 
-    section.help_desk .help_desk_grid-wrapper .slide-5 {
+    section.help_desk .help_desk_grid-wrapper .slide-5,
+    section.help_desk .help_desk_grid-wrapper .slide-moskvich {
         max-width: unset;
         height: unset;
     }
@@ -147,6 +148,7 @@
     section.traffic_patrol .traffic_patrol-text,
     section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text,
     section.help_desk .help_desk_grid-wrapper .driver-3 .driver_text,
+    /*section.help_desk .help_desk_grid-wrapper .сrew .сrew_text,*/
     section.help_desk .help_desk_grid-wrapper .equipment-4 .text,
     section.water_patrol .water_patrol_grid-wrapper .water_patrol_text_1 .water_patrol-text,
     section.water_patrol .water_patrol_grid-wrapper .water_patrol_text_2 .water_patrol-text,
@@ -447,7 +449,7 @@
     }
 
     .garage_model_card .slid_img {
-        background: #090909 url("../../img/layout/pages/main/slider/amarok_slide_mini.png") no-repeat top center/cover;
+        /*background: #090909 url("../../img/layout/pages/main/slider/amarok_slide_mini.png") no-repeat top center/cover;*/
         max-width: unset;
     }
 
@@ -519,7 +521,7 @@
     }
 
     section.situation_centre .situation_centre_grid-wrapper .slider-5 .garage_model_card .slid_img {
-        background: #090909 url(../../img/layout/pages/main/slider/amarok_prevue_big.png) no-repeat top center/cover;
+        /*background: #090909 url(../../img/layout/pages/main/slider/amarok_prevue_big.png) no-repeat top center/cover;*/
         height: 100%;
     }
 
@@ -560,19 +562,21 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         /*grid-template-rows: 293px 284px 120px 1fr;*/
-        grid-template-rows: repeat(4, min-content);
+        grid-template-rows: repeat(3, min-content);
         gap: 20px;
         grid-auto-flow: row;
         grid-template-areas:
-        "help_desk-1 slide-5 parkon-2 parkon-2"
-        ". driver-3 equipment-4 equipment-4"
-        ". . equipment-4 equipment-4"
-        ". . equipment-4 equipment-4";
+        "help_desk-1 parkon-2 parkon-2 driver-3"
+        ". parkon-2 parkon-2 driver-3"
+        "slide-moskvich slide-moskvich slide-5 slide-5"
+        /*". . equipment-4 equipment-4"*/
+        ;
     }
 
     section.help_desk .help_desk_grid-wrapper .equipment-4 {
         grid-area: equipment-4;
-        display: grid;
+        display: none;
+        /*display: grid;*/
         grid-template-columns: repeat(3, 1fr);
         /*grid-template-rows: 29px 151px 151px 151px 151px;*/
         grid-template-rows: repeat(5, min-content);
@@ -611,7 +615,7 @@
     }
 
     section.help_desk .help_desk_grid-wrapper .slide-5,
-    section.help_desk .help_desk_grid-wrapper .slide-6 {
+    section.help_desk .help_desk_grid-wrapper .slide-moskvich {
         /*height: 284px;*/
         height: 100%;
     }
@@ -762,8 +766,9 @@
 
 
     section.help_desk .help_desk_grid-wrapper .equipment-4 {
+        display: none;
         grid-area: equipment-4;
-        display: grid;
+        /*display: grid;*/
         grid-template-columns: repeat(2, 1fr);
         /*grid-template-rows: 29px 151px 151px 151px 151px;*/
         grid-template-rows: repeat(6, min-content);
@@ -799,7 +804,9 @@
 
     section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text,
     section.help_desk .help_desk_grid-wrapper .equipment-4 .text,
-    section.help_desk .help_desk_grid-wrapper .driver-3 .driver_text {
+    section.help_desk .help_desk_grid-wrapper .driver-3 .driver_text
+    /*section.help_desk .help_desk_grid-wrapper .сrew .сrew_text */
+    {
         font-size: 1.4rem;
     }
 }
@@ -826,7 +833,9 @@
         font-size: 1.3rem;
     }
 
-    section.help_desk .help_desk_grid-wrapper .driver-3 .driver_text {
+    section.help_desk .help_desk_grid-wrapper .driver-3 .driver_text
+    /*section.help_desk .help_desk_grid-wrapper .сrew .сrew_text */
+    {
         font-size: 1.4rem;
         line-height: 20px;
     }
@@ -1160,9 +1169,9 @@
         grid-auto-flow: row;
         grid-template-areas:
         "help_desk-1 ."
-        "parkon-2 slide-5"
-        "driver-3 equipment_mobile-text"
-        "equipment_mobile equipment_mobile";
+        "parkon-2 driver-3"
+        "parkon-2 ."
+        "slide-moskvich slide-5";
     }
 
     section.help_desk .help_desk_grid-wrapper .equipment_mobile-text .text {
@@ -1172,9 +1181,14 @@
         line-height: 24px;
     }
 
+    section.help_desk .help_desk_grid-wrapper .equipment_mobile-text {
+        display: none;
+    }
+
     section.help_desk .help_desk_grid-wrapper .equipment_mobile {
         grid-area: equipment_mobile;
-        display: grid;
+        display: none;
+        /*display: grid;*/
         grid-template-columns: repeat(2, 1fr);
         /*grid-template-rows: 84px 725px;*/
         grid-template-rows: repeat(2, min-content);
@@ -1198,7 +1212,8 @@
 
     section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_skills {
         /*grid-area: equipment_mobile;*/
-        display: grid;
+        /*display: grid;*/
+        display: none;
         grid-template-columns: repeat(3, 1fr);
         /*grid-template-rows: 151px 151px 151px 151px;*/
         grid-template-rows: repeat(4, min-content);
@@ -1431,7 +1446,8 @@
     /*    height: 384px;*/
     /*}*/
 
-    section.help_desk .help_desk_grid-wrapper .slide-5 .garage_model_card {
+    section.help_desk .help_desk_grid-wrapper .slide-5 .garage_model_card,
+    section.help_desk .help_desk_grid-wrapper .slide-moskvich .garage_model_card {
         height: 100%;
     }
 }
@@ -1889,7 +1905,8 @@
 
     section.help_desk .help_desk_grid-wrapper .driver-3,
     section.help_desk .help_desk_grid-wrapper .equipment_mobile-text,
-    section.help_desk .help_desk_grid-wrapper .slide-5 {
+    section.help_desk .help_desk_grid-wrapper .slide-5,
+    section.help_desk .help_desk_grid-wrapper .slide-moskvich {
         display: none;
     }
 
@@ -1944,20 +1961,21 @@
         display: grid;
         grid-template-columns: 1fr;
         /*grid-template-rows: 30px 332px 115px 940px 388px;*/
-        grid-template-rows: repeat(5, min-content);
+        grid-template-rows: repeat(4, min-content);
         gap: 40px;
         grid-auto-flow: row;
         grid-template-areas:
         "help_desk-1"
         "parkon-2"
-        "."
-        "equipment_mobile"
+        /*"."*/
+        "mobile_text_combo"
         "equipment_mobile-slide";
     }
 
     section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_skills {
         /*grid-area: equipment_mobile;*/
-        display: grid;
+        /*display: grid;*/
+        display: none;
         grid-template-columns: repeat(2, 1fr);
         /*grid-template-rows: 151px 151px 151px 151px 151px;*/
         grid-template-rows: repeat(5, min-content);
@@ -2083,10 +2101,12 @@
         margin-bottom: 24px;
     }
 
-    .menu .menu-media {
-        bottom: 24px;
-    }
+    /*.menu .menu-media {*/
+    /*    position: absolute;*/
+    /*    bottom: 24px;*/
+    /*}*/
 }
+
 
 
 
