--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -1789,7 +1789,8 @@ section.help_desk .help_desk_grid-wrapper .slide-moskvich {
 /*footer*/
 
 footer.footer_main {
-    padding: 50px 0 60px 0;
+    /*padding: 50px 0 60px 0;*/
+    padding: 50px 0 0 0;
     position: relative;
     /*overflow: hidden;*/
 }
@@ -1819,7 +1820,7 @@ footer.footer_main .container_main:after {
 
 footer.footer_main .container_main {
     border: none;
-    padding: 0 20px;
+    padding: 0 20px 60px 20px;
 }
 
 
@@ -1964,6 +1965,18 @@ footer.footer_main .secure_transportation {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+footer.footer_main .secure_transportation .secure_transportation__logo {
+    margin-right: 10px;
+}
+
+footer.footer_main .secure_transportation .secure_transportation__text {
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 1.6rem;
+    font-weight: 300;
+    color: #FFFFFF;
+    line-height: 24px;
 }
 
 
