--- a/src/style/style_models.css
+++ b/src/style/style_models.css
@@ -585,8 +585,9 @@ a-scene {
     border-radius: 12px;
     height: 224px;
     padding: 20px;
-    width: min-content;
-    max-width: 100%;
+    /* width: min-content; */
+    width: 100%;
+    max-width: 850px;
     pointer-events: all;
 }
 
@@ -642,6 +643,10 @@ a-scene {
     border-radius: 10px;
     border: 1px solid #090909;
     transition: transform 0.3s ease;
+
+    display: 'flex';
+    align-items: 'center';
+    justify-content: 'center';
 }
 
 /*.gallery_item:hover, .gallery_item.active {*/
@@ -656,8 +661,11 @@ a-scene {
     object-fit: cover;
     filter: grayscale(100%);
     transition: transform 0.3s ease;
-    width: 210px;
-    height: 140px;
+    /* width: 210px;
+    height: 140px; */
+    width: 100%;
+    height: 100%;
+    max-height: 140px;
     border-radius: 10px;
 }
 
