new logo add 360

--- a/src/style/loader.css
+++ b/src/style/loader.css
@@ -95,6 +95,7 @@
 
 .progress-bar-container .image img.no_animated {
     object-fit: cover;
+    width: 100%;
 }
 
 .progress-bar-container .image-text {
