--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -1961,11 +1961,19 @@ footer.footer_main .secure_transportation {
     width: 100%;
     height: 60px;
     background: rgba(255, 255, 255, 0.10);
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     display: flex;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
+    transition: all .5s;
 }
+
+/*footer.footer_main .secure_transportation:hover {*/
+/*    -webkit-backdrop-filter: blur(30px);*/
+/*    backdrop-filter: blur(30px);*/
+/*}*/
 
 footer.footer_main .secure_transportation .secure_transportation__logo {
     margin-right: 10px;
